--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/06varsha/test/blob/main/PYTHON.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -793,7 +803,8 @@
     "colab": {
       "name": "PYTHON.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+88e4CNo7PuVuJE8BVsWR"
+      "authorship_tag": "ABX9TyN+88e4CNo7PuVuJE8BVsWR",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
